Project-2: preload video and image, fix text alignment

--- a/Project-2/client/src/components/navbar/style.css
+++ b/Project-2/client/src/components/navbar/style.css
@@ -94,3 +94,9 @@ nav .links__container button:hover {
         display: none;
     }
 }
+
+@media screen and (max-width: 390px) {
+    nav .links__container {
+        flex-direction: column;
+    }
+}
